--- a/ui/html/pages/home.tmpl.html
+++ b/ui/html/pages/home.tmpl.html
@@ -3,20 +3,21 @@
 {{define "main"}}
     <h2>Latest Snippets</h2>
     {{if .Snippets}}
-    <table>
+        <table>
         <tr>
             <th>Title</th>
             <th>Created</th>
-           <th>ID</th>
-         </tr>
-         {{range .Snippets}}
-         <tr>
-             <td><a href='/snippet/view/{{.ID}}'>{{.Title}}</a></td>
-            <td>{{.Created}}</td>
+            <th>ID</th>
+        </tr>
+        {{range .Snippets}}
+        <tr>
+        <td><a href='/snippet/view/{{.ID}}'>{{.Title}}</a></td>
+            <!-- Use the new template function here -->
+            <td>{{humanDate .Created}}</td>
             <td>#{{.ID}}</td>
-         </tr>
+        </tr>
         {{end}}
-    </table>
+        </table>
     {{else}}
         <p>There's nothing to see here... yet!</p>
     {{end}}
