--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -1,6 +1,6 @@
 {{define "base"}}
 <!doctype html>
-<html lang='en'>
+    <html lang='en'>
     <head>
         <meta charset='utf-8'>
         <title>{{template "title" .}} - Snippetbox</title>
@@ -14,10 +14,13 @@
         </header>
         {{template "nav" .}}
         <main>
+            <!-- Display the flash message if one exists -->
+            {{with .Flash}}
+            <div class='flash'>{{.}}</div>
+            {{end}}
             {{template "main" .}}
         </main>
         <footer>
-            <!-- Update the footer to include the current year -->
             Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
         </footer>
         <script src='/static/js/main.js' type='text/javascript'></script>
